# ANFT

./: .env.example  Anchor.toml  Cargo.toml  DIGITAL_IDENTITY_AND_PROVENANCE.md  README.md  next.config.mjs  package-lock.json  package.json  sas-schema-metadata.json
programs/anft_did/: Cargo.toml
programs/anft_did/src/: lib.rs
programs/anft_marketplace/: Cargo.toml
programs/anft_marketplace/src/: lib.rs
scripts/: generate-authority-keypair.js  register-sas-schema.js  setup-sas-schema.mjs
src/app/: globals.css  layout.js  page.js
src/app/create/: page.js  page.module.css
src/app/create-select/: page.js
src/app/did/: did.module.css  page.js
src/app/listing-success/: page.js  page.module.css
src/app/marketplace/: page.js  page.module.css
src/app/paint/: page.js
src/app/profile/: page.js  profile.module.css
src/app/purchase-success/: page.js  page.module.css
src/components/: ConnectWalletPrompt.js  DIDProfileView.js  DIDProfileView.module.css  DIDRegistrationModal.js  DIDRegistrationModal.module.css  DigitalPaintingStudioModern.js  DigitalPaintingStudioModern.module.css  ListNFTModal.js  ListNFTModal.module.css  Navbar.js  Navbar.module.css  WalletAdapterProvider.js  WalletModal.js
src/components/painting/: ColorPickerHSB.js  LayersPanel.js  brushes.js  (+1 more)
src/context/: WalletContext.js
src/hooks/: useDID.js  useWalletAdapter.js
src/idl/: anft_marketplace.json
src/utils/: aiImageGeneration.js  artworkFinalization.js  marketplace.js  marketplaceClient.js  nftUtils.js  sasAttestation.js  solanaDID.js  solanaNFTMinting.js  solanaWallet.js
(+13 files in other folders)
