[package]
name = "anft-did"
version = "0.1.0"
description = "ANFT Decentralized Identity program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anft_did"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
